remove 4 o's in title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Leon lernt viel</title>
 </head>
 <body>
-    <h1>Mooooooin!</h1>
+    <h1>Moin!</h1>
     <p>Was geht?<br>klick mal <a href="https://youtu.be/dQw4w9WgXcQ?si=lJRyDr9kurjm1j2r">hier</a></p>
     <br><br>
     <h2 class="fragen">hast du irgendwelche Fragen?</h2>
