--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leon lernt viel</title>
+    <style>
+        body {
+            color: white;
+            background-color: black;
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+        }
+
+        a {
+            color: white;
+            font-style: unset;
+        }
+
+        h1 {
+            font-size: 80px;
+        }
+    </style>
 </head>
 <body>
     <h1>Moin!</h1>
-    <p>Was geht?<br>klick mal <a href="https://youtu.be/dQw4w9WgXcQ?si=lJRyDr9kurjm1j2r">hier</a></p>
+    <hr>
+    <p>Was geht?<br>klick mal <a href="https://youtu.be/dQw4w9WgXcQ?si=lJRyDr9kurjm1j2r">hier</a>
+    <br>https://prod.liveshare.vsengsaas.visualstudio.com/join?A1DA0FBAA2CF2C1DEB2A54148CF997260439</p>
     <br><br>
     <h2 class="fragen">hast du irgendwelche Fragen?</h2>
 </body>
