--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Leon lernt viel</title>
     <style>
         body {
-            color: white;
+           color: rgb(255, 255, 255);
             background-color: black;
             font-family: Arial, Helvetica, sans-serif;
             text-align: center;
         }
 
         a {
-            color: white;
+            color: rgb(0, 0, 0);
             font-style: unset;
         }
 
@@ -23,11 +23,14 @@
     </style>
 </head>
 <body>
-    <h1>Moin!</h1>
-    <hr>
-    <p>Was geht?<br>klick mal <a href="https://youtu.be/dQw4w9WgXcQ?si=lJRyDr9kurjm1j2r">hier</a>
-    <br>https://prod.liveshare.vsengsaas.visualstudio.com/join?A1DA0FBAA2CF2C1DEB2A54148CF997260439</p>
+    <h1>Willkomen,</h1>
+    <h2>auf Leon's kleiner Webseite</h2>
+
+    <p>Interesse? Schau doch einfach mal unter diesem Qr-Code vorbei</p>
+    <img src="qrcode.png" alt="Qr-Code folgt" width="200" height="200"> 
+
     <br><br>
-    <h2 class="fragen">hast du irgendwelche Fragen?</h2>
+    <h3 class="fragen">oder benutze diesen Link</h3>
+    <h2>http://192.168.2.135:5500/leon_learn/</h2>
 </body>
 </html>
