add some nice border for the qr code

--- a/index.html
+++ b/index.html
@@ -20,11 +20,22 @@
         h1 {
             font-size: 80px;
         }
+
+        .title {
+            font-style:;
+        }
+
+        img {
+            border-radius: 15px;
+            border-color: white;
+            border-width: 5px;
+            border-style: outset;
+        }
     </style>
 </head>
 <body>
-    <h1>Willkomen,</h1>
-    <h2>auf Leon's kleiner Webseite</h2>
+    <h1 class="title">Willkommen,</h1>
+    <h2>auf Elia`s kleiner Webseite(geschieben von Leon)</h2>
 
     <p>Interesse? Schau doch einfach mal unter diesem Qr-Code vorbei</p>
     <img src="qrcode.png" alt="Qr-Code folgt" width="200" height="200"> 
