erste Session abgeschlossen mit Leon
Ich finde, das hat richtig Spaß gemacht.
Leon hat immer wieder versucht etwas neues auszupacken und ich konnte ihn dabei Unterstützen

--- a/index.html
+++ b/index.html
@@ -22,23 +22,40 @@
         }
 
         .title {
-            font-style:;
+            color:red;
         }
-
-        img {
+           
+        .qrcode {
             border-radius: 15px;
             border-color: white;
             border-width: 5px;
             border-style: outset;
         }
+
+
     </style>
 </head>
 <body>
-    <h1 class="title">Willkommen,</h1>
-    <h2>auf Elia`s kleiner Webseite(geschieben von Leon)</h2>
+    <h1 class="title">
+
+        <a class="firstLetter" style="color: lightgoldenrodyellow;">W</a>
+        <a class="secondLetter" style="color: lightblue;">i</a>
+        <a class="firstLetter" style="color: lightgoldenrodyellow;">l</a>
+        <a class="firstLetter" style="color: lightblue;">l</a>
+        <a class="firstLetter" style="color: lightgoldenrodyellow;">k</a>
+        <a class="firstLetter" style="color: lightblue;">o</a>
+        <a class="firstLetter" style="color: lightgoldenrodyellow;">m</a>
+        <a class="firstLetter" style="color: lightblue;">m</a>
+        <a class="firstLetter" style="color: lightgoldenrodyellow;">e</a>
+        <a class="firstLetter" style="color: lightblue;">n</a>
+        <a class="firstLetter" style="color: lightblue;">,</a>
+
+    </h1>
+
+    <h2>auf Kenny's kleiner Webseite. KLEINER HINWEIß: VON JONAS</h2>
 
     <p>Interesse? Schau doch einfach mal unter diesem Qr-Code vorbei</p>
-    <img src="qrcode.png" alt="Qr-Code folgt" width="200" height="200"> 
+    <img class="qrcode" src="qrcode.png" alt="Qr-Code folgt" width="200" height="200"> 
 
     <br><br>
     <h3 class="fragen">oder benutze diesen Link</h3>
